fix flexbox font render issue on mobile ios

--- a/source/sass/modules/_playlist.scss
+++ b/source/sass/modules/_playlist.scss
@@ -33,8 +33,7 @@
     position: relative;
 }
 .playlist__tracks__track {
-    align-items: center;
-    display: flex;
+    display: block;
     opacity: 0;
     overflow: hidden;
     padding: 10px 0;
@@ -43,10 +42,17 @@
     transform: translate3d( 0, -100%, 0 );
 }
 .playlist__tracks__number {
+    display: inline-block;
+    vertical-align: middle;
     padding-right: 50px;
     transition: color $fast-duration $ease,
                 border-bottom-color $fast-duration $ease;
     width: 22px;
+}
+.playlist__tracks__info {
+    display: inline-block;
+    vertical-align: middle;
+    width: #{"~\"calc( 100% - 50px )\""};
 }
 .playlist__more {
     cursor: pointer;
